--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [project]
+dependencies = ["tinydb", "rich>=14.1.0"]
 name = "todolist"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "rich>=14.1.0",
-]
